# Santiago

./: .gitignore  CMakeLists.txt  Makefile.am  config.json  configure.ac
examples/SessionManager/: CMakeLists.txt  ErrorPageHandler.h  LoginPageHandler.cpp  LoginPageHandler.h  Main.cpp  RequestHandlerBase.cpp  RequestHandlerBase.h  Server.h  SignupPageHandler.cpp  SignupPageHandler.h  SimplePageHandler.cpp  SimplePageHandler.h
examples/SessionServer/: CMakeLists.txt  ErrorPageHandler.h  LoginHandler.cpp  LoginHandler.h  LogoutHandler.cpp  LogoutHandler.h  Main.cpp  RequestHandlerBase.cpp  RequestHandlerBase.h  Server.h  SignupHandler.cpp  SignupHandler.h  SignupHangler.cpp  nginx.conf
examples/SessionServer/Config/NginxConfig/: nginx.conf
examples/SessionServer/Html/: login.html  signup.html
src/Santiago/: #CMakeLists.txt#  CMakeLists.txt  Common.h  ErrorCategory.cpp  ErrorCategory.h  HTTPDefinitions.cpp  HTTPDefinitions.h  ThreadSpecificVar.h  lib
src/Santiago/AppServer/: Request.h  RequestHandler.h  RequestHandlerBase.h  Server.h  ServerBase.h
src/Santiago/Authentication/: AuthenticatorBase.cpp  AuthenticatorBase.h  AuthenticatorBaseV1.cpp  AuthenticatorBaseV1.h  AuthenticatorImplBase.h  Common.h  ControllerBase.cpp  ControllerBase.h  ControllerBase.ipp  ControllerData.cpp  ControllerData.h  ControllerDataBase.cpp  ControllerDataBase.h  Notes.txt  OICProviderData.cpp  OICProviderData.h
src/Santiago/Authentication/MultiNode/: AuthenticationMessageSocket.h  Authenticator.cpp  Authenticator.h  AuthenticatorImpl.cpp  AuthenticatorImpl.h  AuthenticatorMessageSocket.cpp  AuthenticatorMessageSocket.h  AuthenticatorRequestMessage.h  ClientCache.cpp  ClientCache.h  ConnectionMessage.cpp  ConnectionMessage.h  ConnectionMessageSocket.cpp  ConnectionMessageSocket.h  ConnectionRequestsController.cpp  ConnectionRequestsController.h  ConnectionRequestsControllerBase.cpp  ConnectionRequestsControllerBase.h  TimeDefs.h
src/Santiago/Authentication/Server/: AddResourceRequestHandler.h  ChangeUserPasswordRequestHandler.h  ConnectionMessage.cpp  ConnectionMessageSocket.cpp  ConnectionMessageSocket.h  ConnectionRequestsController.cpp  ConnectionRequestsController.h  ConnectionServer.cpp  ConnectionServer.h  CreateUserRequestHandler.cpp  LoginUserRequestHandler.cpp  LoginUserRequestHandler.h  LogoutUserForAllCookiesRequestHandler.h  LogoutUserForCookieRequestHandler.h  Message.cpp  Message.h  ServerV1.cpp  ServerV1.h  UserController.cpp  UserController.h  VerifyUserForCookieRequestHandler.h
src/Santiago/Authentication/SingleNode/: Authenticator.cpp  Authenticator.h  AuthenticatorImpl.cpp  AuthenticatorImpl.h  AuthenticatorV1.cpp  (+5 more)
src/Santiago/Fastcgi/: Acceptor.h  CMakeLists.txt  Common.h  Connection.h  ConnectionData.h  PacketSocket.h  PairParseFunctions.h  RecordSocket.h  Request.h  RequestData.h
src/Santiago/Resource/: Resource.h  ResourceStore.h  SampleResourceTypeInfo.h
src/Santiago/SantiagoDBTables/: CMakeLists.txt  CreateTables.sql  DatabaseRecords.h  Definitions.cpp  Definitions.h  MariaDBConnection.cpp  MariaDBConnection.h  MariaDBConnectionV1.cpp  MariaDBConnectionV1.h  santiago.sql
src/Santiago/Server/: Request.h  RequestHandler.h  Server.h
src/Santiago/Thread/: ThreadSpecificVar.h  ThreadSpecificVarImpl.cpp  ThreadSpecificVarImpl.h
src/Santiago/ThreadSpecificVar/: ThreadSpecificVar.h
src/Santiago/User/: CMakeLists.txt  ControllerBase.cpp  ControllerBase.h
src/Santiago/Utils/: CMakeLists.txt  DownloadFromURL.cpp  DownloadFromURL.h  DynamicToStatic.h  Email.cpp  Email.h  LogLevel.h  PTimeUtils.cpp  PTimeUtils.h  STLog.cpp  STLog.h  STLogV1.cpp  STLogV1.h
src/Santiago/fastcgi_devkit/: CMakeLists.txt
src/lib/SantiagoDBTables/: CMakeLists.txt  Definitions.cpp  Definitions.h  Maps.cpp  Maps.h  MariaDBConnection.cpp  MariaDBConnection.h  Records.h  UserPermissions.h
src/test/: CMakeLists.txt
src/test/Authentication/: AuthenticatorTesterBase.cpp  AuthenticatorTesterBase.h  CMakeLists.txt
src/test/Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
src/test/CreateUserWalkThrough/: AsyncCreateUserHandler.cpp  AsyncCreateUserHandler.h  AsyncDeleteUserHandler.cpp  AsyncDeleteUserHandler.h  AsyncGetUserInfoHandler.cpp  AsyncGetUserInfoHandler.h  AsyncLoginUserHandler.cpp  AsyncLoginUserHandler.h  AsyncLogoutUserForAllCookieHandler.cpp  AsyncLogoutUserForAllCookieHandler.h  AsyncLogoutUserHandler.cpp  AsyncLogoutUserHandler.h  AsyncPasswordRecoveryInitiateRecoveryHandler.h  AsyncPasswordRecoveryReceiveNewPasswordHandler.cpp  AsyncPasswordRecoveryReceiveNewPasswordHandler.h  AsyncPasswordRecoverySetNewPasswordHandler.cpp  AsyncPasswordRecoverySetNewPasswordHandler.h  CMakeLists.txt  ChangePasswordHandler.cpp  ChangePasswordHandler.h  CreateUserHandler.cpp  CreateUserHandler.h  DeleteUserHandler.cpp  DeleteUserHandler.h  ErrorURIHandler.h  GetUserInfoHandler.cpp  GetUserInfoHandler.h  LoginUserHandler.cpp  LoginUserHandler.h  LogoutUserForAllCookieHandler.cpp  LogoutUserForAllCookieHandler.h  LogoutUserHandler.cpp  LogoutUserHandler.h  PasswordRecoveryInitiateRecoveryHandler.cpp  PasswordRecoveryInitiateRecoveryHandler.h  PasswordRecoveryReceiveNewPasswordHandler.cpp  PasswordRecoveryReceiveNewPasswordHandler.h  PasswordRecoverySetNewPasswordHandler.cpp  PasswordRecoverySetNewPasswordHandler.h  PasswordrecoveryReceiveNewPasswordHandler.cpp  (+5 more)
src/test/Fastcgi/: CMakeLists.txt  Echo.cpp
src/test/HelloWorldApp/: CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  ErrorURIHandler.h  RequestHandlerBase.cpp  RequestHandlerBase.h  Server.h  hello_world.html  main.cpp
src/test/SantiagoDBTables/: CMakeLists.txt  DatabaseTest.cpp  MariaDBConnectionTest.cpp
src/test/Server/: AsyncService.cpp
src/test/ServerV1/: CMakeLists.txt  main.cpp
src/test/SimpleAppServer/: CMakeLists.txt  LoginPageHandler.cpp  LoginPageHandler.h  PasswordRecoveryInitiateRecoveryHandler.cpp  PasswordRecoveryInitiateRecoveryHandler.h  RequestHandlerBase.cpp  RequestHandlerBase.h  Server.h  SignupHandler.cpp  SignupHandler.h  SimplePageHandler.cpp  SimplePageHandler.h  config.json  main.cpp
(+182 files in other folders)
